objects/Subscription_Change__c.object
<CustomObject>
    <description>Subscription Changes on Projects</description>
    <label>Subscription Change</label>
    <nameField>
        <displayFormat>PH{00000}</displayFormat>
        <label>Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>IsNew__c</fullName>
        <formula>ARR_Change__c &gt; 0 &amp;&amp;  Prior_ARR__c &lt; 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this tranaction a new customer</inlineHelpText>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCancel__c</fullName>
        <formula>ARR_Change__c &lt; 0 &amp;&amp;  Round(Current_ARR__c ,0)=0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is This Customer Cancellation</inlineHelpText>
        <label>IsCancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpgrade__c</fullName>
        <formula>Prior_ARR__c  &gt; 0 &amp;&amp;  ARR_Change__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this transaction a downgrade</inlineHelpText>
        <label>IsUpgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_ARR__c</fullName>
        <label>Prior ARR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Change__c</fullName>
        <inlineHelpText>ARR change in the transaction</inlineHelpText>
        <label>ARR Change</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Plan__c</fullName>
        <label>Prior Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <label>ARR</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ARR_New__c</fullName>
        <formula>ARR_Change__c *  If(IsNew__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportuinty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscription Changes</relationshipLabel>
        <relationshipName>Subscription_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Plan__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Makers__c</fullName>
        <label>Prior Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsContraction__c</fullName>
        <formula>ARR_Change__c &lt; 0 &amp;&amp;  Current_ARR__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this transaction a downgrade</inlineHelpText>
        <label>IsContraction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_PB_ID__c</fullName>
        <label>Project PB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_PB_Status__c</fullName>
        <label>Prior PB Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Text__c</fullName>
        <label>Project ID (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <label>Subscription ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_PB_Status__c</fullName>
        <label>Current PB Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_ARR_Cancelled__c</fullName>
        <formula>ARR_Change__c *  If( IsCancel__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR Cancelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ARR_Expansion__c</fullName>
        <formula>ARR_Change__c *  If( IsUpgrade__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR Expansion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_ARR_Contraction__c</fullName>
        <formula>ARR_Change__c *  If( IsContraction__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR Contraction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Billing_Cycle__c</fullName>
        <label>Prior Billing Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Period_End_Date__c</fullName>
        <label>Current Period End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Purchased_Makers__c</fullName>
        <label>Purchased Makers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Period_Start_Date__c</fullName>
        <label>Current Period Start Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>